crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@265.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_exp_div VALUES (6,0,'NaN');"
---
InsertStmt@0..43
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..23
    Ident@12..23 "num_exp_div"
  Whitespace@23..24 " "
  SelectStmt@24..41
    Values@24..30 "VALUES"
    Whitespace@30..31 " "
    Ascii40@31..32 "("
    List@32..41
      AConst@32..33
        Iconst@32..33 "6"
      Ascii44@33..34 ","
      AConst@34..35
        Iconst@34..35 "0"
      Ascii44@35..36 ","
      AConst@36..41
        Sconst@36..41 "'NaN'"
  Ascii41@41..42 ")"
  Ascii59@42..43 ";"

