crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@269.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_exp_div VALUES (6,1,'.000000550624150700285432940805295709861455424264970126953321538967550091614148982212874391026630805836518138806917934859138493583812313778188030836027246840794439412443826640206464415527687555214009725107630387889854278497875708390050387195108441635824296563108288712340902423706104029452615686971019125750530034798026103476074158922893374911891438688457439945897348811702908216883650280617098402133628688982793791562476980709924382381505517834196446365877784931355599480881104446907801805570471686295270927836995181422963320376948188855989986414581755633425437161760674162177776773597848142496583128607548351599750592863590334617838124741567654525843413232313914310487355539260264225486180000012813397807525203822863232682089295055713257835007742845010741137213301116647610033909062369843750685396196342928455');"
---
InsertStmt@0..851
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..23
    Ident@12..23 "num_exp_div"
  Whitespace@23..24 " "
  SelectStmt@24..849
    Values@24..30 "VALUES"
    Whitespace@30..31 " "
    Ascii40@31..32 "("
    List@32..849
      AConst@32..33
        Iconst@32..33 "6"
      Ascii44@33..34 ","
      AConst@34..35
        Iconst@34..35 "1"
      Ascii44@35..36 ","
      AConst@36..849
        Sconst@36..849 "'.0000005506241507002 ..."
  Ascii41@849..850 ")"
  Ascii59@850..851 ";"

